tests/ui/lint/snapshots/float_equality_without_abs_margin_on_left.snap
---
source: tests/ui/lint/mod.rs
---
  [warning] Float equality without `abs`
   ╭─[test.lis:5:11]
 4 │   let g: float64 = 2.0
 5 │   let _ = 0.5 > (f - g)
   ·           ──────┬──────
   ·                 ╰── difference is not wrapped in `math.Abs`
 6 │ }
   ╰────
  help: Because `a - b` is signed, this is also `true` whenever `a` is far below `b`, not only when `a` and `b` are close, so it wrongly accepts values that are nowhere near equal. Compare the magnitude instead: `math.Abs(a - b) < c` · code: [lint.float_equality_without_abs]
