tests/ui/lint/snapshots/genuinely_unread_embedded_field_still_warns.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Unused field
   ╭─[test.lis:4:3]
 3 │   width: int,
 4 │   height: int,
   ·   ───┬──
   ·      ╰── never read
 5 │ }
   ╰────
  help: Use or remove this field · code: [lint.unused_struct_field]
