tests/ui/lint/snapshots/goos_comparison_invalid_equal.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Comparison is always false
   ╭─[test.lis:4:11]
 3 │ fn main() {
 4 │   let _ = runtime.GOOS == "windows10"
   ·           ─────────────┬─────────────
   ·                        ╰── `runtime.GOOS` never holds this value
 5 │ }
   ╰────
  help: `runtime.GOOS` only ever holds a known operating system, and this is not one. Did you mean a valid value such as `linux`, `darwin`, or `windows`? · code: [lint.goos_goarch_comparison]
